# project-tasker

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  constraints.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup-dev.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-security.yml  ci.yml  codeql.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 001_initial.py
project_tasker/: cli.py  main.py
project_tasker/api/: api.py  deps.py  main.py
project_tasker/api/endpoints/: auth.py  projects.py
project_tasker/api/schemas/: base.py
project_tasker/core/: config.py  database.py  models.py
project_tasker/core/logging/: config.py
project_tasker/core/security/: utils.py
project_tasker/integrations/: base.py
project_tasker/nlp/: feature_parser.py
tests/api/: test_auth.py
tests/nlp/: test_feature_parser.py
