[tool.poetry]
name = "project-tasker"
version = "0.1.0"
description = "Automated project management integration tool"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.0"
sqlalchemy = "^1.4.0"
psycopg2-binary = "^2.9.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
redis = "^4.0.0"
celery = "^5.1.0"
spacy = "^3.2.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.0"
black = "^21.9b0"
flake8 = "^3.9.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3
