[tool.poetry]
name = "project-tasker"
version = "0.1.0"
description = "Automated project management integration tool"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = "^4.5.4"
celery = "^5.2.7"
spacy = "^3.5.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
alembic = "^1.10.4"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3
