[tool.poetry]
name = "project-tasker"
version = "0.1.0"
description = "Automated project management integration tool"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"  # Updated for security fixes
uvicorn = "^0.23.2"
pydantic = "^2.1.1"  # Major version upgrade for security
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = "^4.6.0"
celery = "^5.3.1"
spacy = "^3.6.0"
requests = "^2.31.0"  # Updated for CVE fixes
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
click = "^8.1.6"
cryptography = "^41.0.3"  # Explicitly defining secure version
urllib3 = "^2.0.4"  # Explicitly defining secure version

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=project_tasker --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
